--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/free-lufthansa-282468.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management System</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="min-h-screen">
+    <div id="root" class="relative flex min-h-screen flex-col"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
